# nyancat

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
input/: logcat.txt  sanity.txt  stacktrace.txt
src/: cli.rs  filter.rs  filters.rs  input.rs  log.rs  main.rs  parse.rs  parsing.rs
src/cli/: args.rs  mod.rs  run.rs
src/format/: colors.rs  formatter.rs  log_line.rs  mod.rs
