[package]
name = "nyancat"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.99"
chumsky = "0.11.1"
time = { version = "0.3.44", features = ["parsing"] }
time-macros = { version = "0.2.24", features = ["formatting"] }
strum = { version = "0.27.2", features = ["derive"] }
regex = "1.11.3"
